--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://kit.fontawesome.com/8da29189e8.js" crossorigin="anonymous"></script>
     <!------ connect with css file ------->
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="shortcut icon" href="images/fav-icon.jpg" type="image/x-icon">
     <title>Football Website</title>
 </head>
 
